Fixed z-index problem on founder portraits

--- a/public/styles/sass/_about.scss
+++ b/public/styles/sass/_about.scss
@@ -1,5 +1,6 @@
 .img-wrap, .cdmx-wrap {
   display: flex;
+  z-index: 2;
 }
 
 #about {
